--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="display_small">#FFFFFFFF</color>
     <color name="text_medium">#FFB0B3B8</color>
+    <color name="body">#4E4B66</color>
+    <color name="text_title">#000000</color>
+
 </resources>
