--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="body">#4E4B66</color>
+    <color name="text_title">#000000</color>
 
     <color name="display_small">#000000</color>
     <color name="text_medium">#FF4E4B66</color>
