--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,5 +5,6 @@
     <color name="body">#4E4B66</color>
     <color name="text_title">#000000</color>
     <color name="shimmer">#C3C3C3</color>
+    <color name="placeholder">#A0A3BD</color>
 
 </resources>
