--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="text_title">#000000</color>
     <color name="shimmer">#C3C3C3</color>
     <color name="placeholder">#A0A3BD</color>
+    <color name="input_background">#fff</color>
 
     <color name="display_small">#000000</color>
     <color name="text_medium">#FF4E4B66</color>
