--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,10 +2,9 @@
 <resources>
     <color name="display_small">#FFFFFFFF</color>
     <color name="text_medium">#FFB0B3B8</color>
-    <color name="body">#4E4B66</color>
-    <color name="text_title">#000000</color>
-    <color name="shimmer">#C3C3C3</color>
-    <color name="placeholder">#A0A3BD</color>
-    <color name="input_background">#fff</color>
-
+    <color name="text_title">#E4E6EB</color>
+    <color name="body">#B0B3B8</color>
+    <color name="input_background">#3A3B3C</color>
+    <color name="placeholder">#DDDDDD</color>
+    <color name="shimmer">#414243</color>
 </resources>
